lmce-asterisk (0+0.3.3-1) lucid; urgency=low

  * Add mbrola for french and german tts

 -- Serge Wagener <serge@linuxmce.org>  Wed, 12 Sep 2012 09:52:21 +0200

lmce-asterisk (0+0.3.2-1ubuntu2) lucid; urgency=low

  * Some bug fixes
  * Fix for incoming fax

 -- Serge Wagener <serge@linuxmce.org>  Tue, 21 Aug 2012 21:03:45 +0200

lmce-asterisk (0+0.3.2-1ubuntu1) lucid; urgency=low

  * Adding primitive fax send support, this is work in progress
  * added tables for cdr support
  * Added video support

 -- Serge Wagener <serge@linuxmce.org>  Sat, 21 Apr 2012 22:10:55 +0200

lmce-asterisk (0+0.3.2-1) unstable; urgency=low

  * Adding tools for future fax support as dependency
  * Add asterisk user to sudoers for dialplan scripts

 -- Serge Wagener <serge@linuxmce.org>  Thu, 05 Apr 2012 20:17:45 +0200

lmce-asterisk (0+0.3.1-2) unstable; urgency=low

  * Fixed #1345 - bug on incoming and outgoing sip connections
  * Refs #1332 - experimental gtalk phoneline provider support
  * Refs #1328 - Don't clear peers from realtime cache, makes incoming
    calls not work after some minutes
  * Fixed bug preventing IAX2 provider registration
  * Fixed some IAX provider trunk bug's
  * Fixed a bug if SIP provider username <> phonenumber
  * Fixed a bug for incoming calls when username <> phonenumber
  * Fixes #1396, adding asterisk group if it does not yet exist

 -- Serge Wagener <serge@linuxmce.org>  Thu, 26 Jan 2012 17:20:23 +0100

lmce-asterisk (0+0.3.1-1) unstable; urgency=low

  * Added support for CISCO mobile iOS app softphone (see http://wiki.linuxmce.org/index.php/Cisco_Mobile)
  * Corrected sos sound files path
  * Remove sox warning messags
  * Some modification on SIP provider registering to reduce incoming
    call problems
  * Setting default SIP language to en, targeting multi language once
    all works

 -- Serge Wagener <serge@linuxmce.org>  Sat, 19 Nov 2011 18:54:38 +0100

lmce-asterisk (0+0.3.0-4) unstable; urgency=low
